# llm-app

./: README.md  cf_2161c.cpp  docker-compose.yaml  dynamicSimulation.html  main.cpp  main.go  main.gos  main.rs  main2.cpp  mandelbrot_fractal.f90  nuke.cpp  red_cost.py  winsysmain.cpp
ai-python/: Dockerfile
ai-python/src/: main.py
backend-go/: Dockerfile  go.mod  go.sum
backend-go/pb/ai/: ai.pb.go  ai_grpc.pb.go
backend-go/pb/simulation/: simulation.pb.go  simulation_grpc.pb.go
backend-go/src/: main.go
compute-cpp/: CMakeLists.txt  Dockerfile
compute-cpp/src/: heat_equation.cpp  heat_equation.h  main.cpp  nbody.cpp  nbody.h
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
protos/: ai.proto  simulation.proto
